@@ -233,6 +233,9 @@ compute_local_magnitude = boolean(default=False)
 a = float(default=1.)
 b = float(default=0.00301)
 c = float(default=3.)
+# Band-pass filtering frequencies (Hz) for local magnitude
+ml_bp_freqmin = float(default=0.1)
+ml_bp_freqmax = float(default=20.0)
 # -------- LOCAL MAGNITUDE PARAMETERS
 
 
