@@ -17,6 +17,7 @@ v1.0 - 2020-12-xx
 		- removed "pre_filt" option
 	- Option to specify non standard instrument codes (e.g., "L" for
 	  acceleration)
+	- Option to specify filter frequencies for local magnitude computation
 	- Plotting improvements:
 		- Show S/N ratio on trace plots
 		- Show spectral S/N ratio on spectrum plots
